--- a/.env.sample
+++ b/.env.sample
@@ -1,19 +1,3 @@
-OPENROUTER_API_KEY=...  # should be set
+OPENROUTER_API_KEY=...  # should be set  # should be set
 
 TVLY_API_KEY=...  # only for agent tool to search the web (could be unset)
-
-LLM_MODEL_PLAN=openai/gpt-4.1
-LLM_MODEL_DECISION=openai/gpt-4.1
-LLM_MODEL_REPLAN=openai/gpt-4.1
-
-LLM_MODEL_AGENT=deepseek/deepseek-v3.2
-
-# Popular models
-#
-# "openai/gpt-4.1"
-# "moonshotai/kimi-k2-thinking"
-# z-ai/glm-4.6
-# "deepseek/deepseek-v3.2"
-# deepseek/deepseek-v3.2-speciale
-# "qwen/qwen3-32b"
-# "google/gemini-3-flash-preview"
